--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 <div class="Intro">
                      <div class="Intro_text">
                         <h3>Hi,</h3>
-                        <h1>I'am <span> Aniruddh Pratap Singh </span></h1>
-                        <h3>And i'am <span> Frontend Developer</span></h3>
+                        <h1>Myself, <span> Aniruddh Pratap Singh </span></h1>
+                        <h3>And I'm <span> Frontend Developer</span></h3>
                         <button>Contact</button>
                         <div class="Icon">
                             <a href="https://www.instagram.com/_alpha_predator_"><i class="fa-brands fa-instagram"></i></a>
